updated and reduced dependencies different to mycore